@@ -5,21 +5,21 @@ manual-changelog: changelog.txt
 externals:
 	Libs/LibStub: https://repos.wowace.com/wow/libstub/trunk
 	Libs/CallbackHandler-1.0: https://repos.wowace.com/wow/callbackhandler/tags/1.0.8/CallbackHandler-1.0
-	Libs/AceAddon-3.0: https://repos.wowace.com/wow/ace3/tags/Release-r1200/AceAddon-3.0
-	Libs/AceHook-3.0: https://repos.wowace.com/wow/ace3/tags/Release-r1200/AceHook-3.0
-	Libs/AceComm-3.0: https://repos.wowace.com/wow/ace3/tags/Release-r1200/AceComm-3.0
-	Libs/AceDB-3.0: https://repos.wowace.com/wow/ace3/tags/Release-r1200/AceDB-3.0
-	Libs/AceDBOptions-3.0: https://repos.wowace.com/wow/ace3/tags/Release-r1200/AceDBOptions-3.0
-	Libs/AceLocale-3.0: https://repos.wowace.com/wow/ace3/tags/Release-r1200/AceLocale-3.0
-	Libs/AceEvent-3.0: https://repos.wowace.com/wow/ace3/tags/Release-r1200/AceEvent-3.0
-	Libs/AceSerializer-3.0: https://repos.wowace.com/wow/ace3/tags/Release-r1200/AceSerializer-3.0
-	Libs/AceTimer-3.0: https://repos.wowace.com/wow/ace3/tags/Release-r1200/AceTimer-3.0
-	Libs/AceGUI-3.0: https://repos.wowace.com/wow/ace3/tags/Release-r1200/AceGUI-3.0
-	Libs/AceConsole-3.0: https://repos.wowace.com/wow/ace3/tags/Release-r1200/AceConsole-3.0
-	Libs/AceConfig-3.0: https://repos.wowace.com/wow/ace3/tags/Release-r1200/AceConfig-3.0
-	Libs/LibSharedMedia-3.0: https://repos.wowace.com/wow/libsharedmedia-3-0/tags/v8.0.1/LibSharedMedia-3.0
-	Libs/LibDBIcon-1.0: https://repos.wowace.com/wow/libdbicon-1-0/tags/v8.0.3/LibDBIcon-1.0
-	Libs/LibLevelGuess-1.0: https://repos.wowace.com/wow/liblevelguess-1-0/tags/1.2.1/LibLevelGuess-1.0
+	Libs/AceAddon-3.0: https://repos.wowace.com/wow/ace3/tags/Release-r1214/AceAddon-3.0
+	Libs/AceHook-3.0: https://repos.wowace.com/wow/ace3/tags/Release-r1214/AceHook-3.0
+	Libs/AceComm-3.0: https://repos.wowace.com/wow/ace3/tags/Release-r1214/AceComm-3.0
+	Libs/AceDB-3.0: https://repos.wowace.com/wow/ace3/tags/Release-r1214/AceDB-3.0
+	Libs/AceDBOptions-3.0: https://repos.wowace.com/wow/ace3/tags/Release-r1214/AceDBOptions-3.0
+	Libs/AceLocale-3.0: https://repos.wowace.com/wow/ace3/tags/Release-r1214/AceLocale-3.0
+	Libs/AceEvent-3.0: https://repos.wowace.com/wow/ace3/tags/Release-r1214/AceEvent-3.0
+	Libs/AceSerializer-3.0: https://repos.wowace.com/wow/ace3/tags/Release-r1214/AceSerializer-3.0
+	Libs/AceTimer-3.0: https://repos.wowace.com/wow/ace3/tags/Release-r1214/AceTimer-3.0
+	Libs/AceGUI-3.0: https://repos.wowace.com/wow/ace3/tags/Release-r1214/AceGUI-3.0
+	Libs/AceConsole-3.0: https://repos.wowace.com/wow/ace3/tags/Release-r1214/AceConsole-3.0
+	Libs/AceConfig-3.0: https://repos.wowace.com/wow/ace3/tags/Release-r1214/AceConfig-3.0
+	Libs/LibSharedMedia-3.0: https://repos.wowace.com/wow/libsharedmedia-3-0/tags/v8.2.0/LibSharedMedia-3.0
+	Libs/LibDBIcon-1.0: https://repos.wowace.com/wow/libdbicon-1-0/tags/v8.2.0/LibDBIcon-1.0
+	Libs/LibLevelGuess-1.0: https://repos.wowace.com/wow/liblevelguess-1-0/tags/1.2.2/LibLevelGuess-1.0
 	Libs/LibGraph-2.0: https://repos.wowace.com/wow/libgraph-2-0/tags/v2.0.4/LibGraph-2.0
 	Libs/LibDialog-1.0:
 		url: https://repos.wowace.com/wow/libdialog-1-0
