@@ -1,5 +1,10 @@
 Release Changelog for VanasKoS
 
+latest:
+- Update toc, and libraries for 8.2
+- Fix for last attackers being cleared on death
+- Fix pvp stats not updating on win/loss
+
 5.00:
 - Fix importer error for unknown areas
 - Fix error when joining party members from your realm
